# embodiedcar

./: command_repository.txt
CppVISUAL/: CMakeLists.txt  change.py  pc_detector.cpp  requirements.txt
CppVISUAL/data/: coco.data
CppVISUAL/modelzoo/: coco2017-0.241078ap-model.onnx
Mediapipe/: README.md  mediapipe_detect.py  requirements.txt
Mediapipe_backup/: mediapipe_detect.py
Yolo-FastestV2/: rasp_yolo.py  rasp_yolo_multiple_objects.py  rasp_yolo_original.py  test.py
desktop_try/: get_camera.py
mediapipe_app/: README.md  mediapipe_detect.py
